Optimization of process Support for SQLite/mYSQL by SqlA pumps are controlled now by i2c/GPIO or i2c/PWM

--- a/html/analyze.html
+++ b/html/analyze.html
@@ -27,13 +27,13 @@
 							<a href="/config">Config</a>
 						</li>
 						<li>
-							<a href="/pumps">Pumps</a>
+							<a href="/pumps">Ingredients</a>
 						</li>
 						<li>
 							<a href="/recipes">Recipes</a>
 						</li>
 						<li>
-							<a style="color: #760001; border-bottom: 3px solid #760001;" href="/analyse">Analyse</a>
+							<a style="color: #760001; border-bottom: 3px solid #760001;" href="/analyze">Analyze</a>
 						</li>
 					</ul>
 				</nav>
@@ -47,7 +47,7 @@
 						New
 					</button>
 					<div id="chgbuttons">
-						<button type="Undo" onclick="getAnalyse()">
+						<button type="undo" onclick="getAnalyse()">
 							Undo
 						</button>
 						<button type="submit" onclick="postChanges()">
