Support for Continuous and Stepper motors Various fixes Interface cleanup

--- a/html/pumps.html
+++ b/html/pumps.html
@@ -93,8 +93,8 @@
 						<th>Pump</th>
 						<th>Duration</th>
 						<th>Quantity</th>
-						<th>Test</th>
-						<th>Save</th>
+						<th>Set Duration</th>
+						<th>Save Duration</th>
 						<th>Delete</th>
 					</tr>
 				</thead>
@@ -106,8 +106,8 @@
 						<th>Pump</th>
 						<th>Duration</th>
 						<th>Quantity</th>
-						<th>Test</th>
-						<th>Save</th>
+						<th>Set Duration</th>
+						<th>Save Duration</th>
 						<th>Delete</th>
 					</tr>
 				</tfoot>
