--- a/html/recipes.html
+++ b/html/recipes.html
@@ -37,6 +37,9 @@
 						</li>
 					</ul>
 				</nav>
+				<button style="color: #760001;" id='shutdown' type="button" onclick="buttonclick(id)" ontouchstart="buttondown(id)">
+					<img src="../pictures/poweroff2.png" alt="Shutdown" /> 
+				</button>
 			</header>
 			<div id="command_bar">
 				<div>
