--- a/html/Pianocktail.html
+++ b/html/Pianocktail.html
@@ -8,7 +8,7 @@
 		<title>Pianocktail</title>
 		<meta name="description" content="" />
 		<meta name="author" content="Bertrand Verdu" />
-		<meta name="viewport" content="width=device-width; initial-scale=1.0" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
 		<link rel="shortcut icon" href="favicon.png" />
 		<link rel="apple-touch-icon" href="favicon.png" />
@@ -38,6 +38,9 @@
 					</ul>
 					
 				</nav>
+                <button style="color: #760001;" id='fullscreen' type="button" onclick="buttonclick(id)">
+					<img src="../pictures/fullscreen.png" alt="fullscreen" /> 
+				</button>
 				<button style="color: #760001;" id='shutdown' type="button" onclick="buttonclick(id)" ontouchstart="buttondown(id)">
 					<img src="../pictures/poweroff2.png" alt="Shutdown" /> 
 				</button>
