Switch to Python3

--- a/html/Pianocktail.html
+++ b/html/Pianocktail.html
@@ -17,7 +17,7 @@
 	<body  onload="wsinit()">
 		<div id="page">
 			<header>
-				<h1>Pianocktail</h1>
+				<h1 onclick='buttonclick("fullscreen")'>Pianocktail</h1>
 				<nav>
 					<ul>
 						<li>
@@ -38,9 +38,9 @@
 					</ul>
 					
 				</nav>
-                <button style="color: #760001;" id='fullscreen' type="button" onclick="buttonclick(id)">
-					<img src="../pictures/fullscreen.png" alt="fullscreen" /> 
-				</button>
+<!--                 <button style="color: #760001;" id='fullscreen' type="button" onclick="buttonclick(id)"> -->
+<!-- 					<img src="../pictures/fullscreen.png" alt="fullscreen" />  -->
+<!-- 				</button> -->
 				<button style="color: #760001;" id='shutdown' type="button" onclick="buttonclick(id)" ontouchstart="buttondown(id)">
 					<img src="../pictures/poweroff2.png" alt="Shutdown" /> 
 				</button>
