Remove verbose debug messages

--- a/html/config.html
+++ b/html/config.html
@@ -17,7 +17,7 @@
 	<body onload="getConf();">
 		<div id="page">
 			<header>
-				<h1>Pianocktail</h1>
+				<h1 onclick='buttonclick("fullscreen")'>Pianocktail</h1>
 				<nav>
 					<ul>
 						<li>
