--- a/html/pumps.html
+++ b/html/pumps.html
@@ -17,7 +17,7 @@
 	<body onload="getPumps();" onunload='checkData();'>
 		<div id="page">
 			<header>
-				<h1>Pianocktail</h1>
+				<h1 onclick='buttonclick("fullscreen")'>Pianocktail</h1>
 				<nav>
 					<ul>
 						<li>
